# academic-tutorship-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  logging.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml
.github/workflows/: deploy-bot.yaml  pre-commit.yaml
alembic/: env.py  script.py.mako
alembic/versions/: _2026_03_07_15_40_initial.py  _2026_03_07_18_29_better_foreign_keys.py  _2026_03_09_12_25_email_not_null.py  _2026_03_19_16_10_add_meeting_approving_status.py  _2026_03_21_13_46_.py  _2026_03_21_21_52_.py  _2026_03_26_15_26_.py  _2026_04_04_17_51_.py  _2026_04_05_15_54_.py  _2026_04_05_15_57_.py
docs/: README.md  bot_features_and_texts.md  database_erd.drawio  database_tables.drawio  disciplines.sql  texts_translation.csv
locales/en/LC_MESSAGES/: dialog.ftl  handles.ftl  notification_handles.ftl  notifications.ftl
locales/ru/LC_MESSAGES/: dialog.ftl  handles.ftl  notification_handles.ftl  notifications.ftl
scripts/: clear_aiogram_redis.py  run_tests.sh
src/: accounts_sdk.py  config_schema.py  prepare.py
src/bot/: api.py  app.py  bot_container.py  constants.py  dispatcher.py  dto.py  exceptions.py  extended_dialog_manager.py  extended_fsm_context.py  filters.py  i18n.py  logging_.py  middlewares.py  scheduling.py  user_errors.py  utils.py
src/bot/custom_widgets/: __init__.py  meeting_date_room_text.py  meeting_info_text.py  meeting_update_text.py  tutors_profile_text.py  unpacked_list.py
src/bot/dialog_extension/: __init__.py  dialog_wrapper.py  extended_dialog_manager.py  extended_fsm_context.py
src/bot/dialogs/: meetings.py
src/bot/dialogs/attendance/: handles.py  logic.py  states.py  windows.py
src/bot/dialogs/authentication/: __init__.py  getters.py  handles.py  states.py  windows.py
src/bot/routers/: admin.py  commands.py  queries.py  registration.py
src/db/: schema.py
src/db/repositories/: __init__.py  admin.py  discipline.py  meeting.py  sql.py  student.py  tutor.py
src/domain/: enums.py  models.py  repositories.py
src/notifications/: __init__.py  bot.py  bot_commands.py  handles.py  notification_manager.py  texts.py
src/notifications/senders/: __init__.py  base.py  telegram.py
src/scheduling/: scheduler.py  scheduling.py
src/support_daemon/: config.py  pipe.py
src/support_daemon/client/: __main__.py
src/support_daemon/server/: __init__.py  logic.py
src/use_cases/: meeting.py
src/utils/: colors.py  excel.py
tests/: fixtures.py  test_admin_repo.py  test_auto_auth_middleware.py  test_notification_manager.py  test_scheduling.py  test_student_repo.py  test_tutor_repo.py
(+70 files in other folders)
