[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = ""
authors = ["one-zero-eight <https://t.me/one_zero_eight>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.22.0"
aiogram-dialog = "^2.4.0"
colorlog = "^6.10.1"
pre-commit = "^4.3.0"
pydantic = "^2.11.10"
pyyaml = "^6.0.3"
redis = "^6.4.0"
ruff = "^0.14.1"

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
