[project]
name = "academic-tutorship-bot"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.13,<3.14"


dependencies = [
    "aiogram>=3.27.0",
    "aiogram-dialog>=2.6.0",
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.49",
    "babel>=2.18.0",
    "fluent-runtime>=0.4.0",
    "colorlog>=6.10.1",
    "cryptography>=48.0.0",
    "pydantic[email]>=2.12.5",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "ruff>=0.15.12",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "joserfc>=1.6.5",
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.0",
    "apscheduler>=3.11.2",
    "pytest-asyncio>=1.3.0",
    "aiohttp-socks>=0.11.0",
    "beanie>=2.1.0",
    "prek>=0.3.13",
]


[tool.ruff]
line-length = 120
target-version = "py313"
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = [
    "PLC0415",
    "PLR",
    "F403",  # import * are ok
    "F405"   # names imported by * are ok
]
